@@ -4,7 +4,7 @@
       "Michael Jemmeson <mjemmeson@cpan.org>"
    ],
    "dynamic_config" : 0,
-   "generated_by" : "Dist::Zilla version 5.025, Dist::Milla version v1.0.5, CPAN::Meta::Converter version 2.143240",
+   "generated_by" : "Dist::Zilla version 5.031, Dist::Milla version v1.0.14, CPAN::Meta::Converter version 2.143240",
    "license" : [
       "perl_5"
    ],
@@ -39,12 +39,7 @@
             "HTML::TreeBuilder" : "0"
          },
          "requires" : {
-            "Dist::Zilla" : "5.009",
-            "Dist::Zilla::Plugin::CopyFilesFromBuild" : "0",
-            "Dist::Zilla::Plugin::Prereqs" : "0",
-            "Dist::Zilla::Plugin::RunExtraTests" : "0",
-            "Dist::Zilla::PluginBundle::DAGOLDEN" : "0",
-            "Dist::Zilla::PluginBundle::Filter" : "0",
+            "Dist::Milla" : "v1.0.14",
             "File::Spec" : "0",
             "File::Temp" : "0",
             "IO::Handle" : "0",
@@ -81,6 +76,16 @@
             "Test::More" : "0.96",
             "lib" : "0"
          }
+      }
+   },
+   "provides" : {
+      "Geo::UK::Postcode::Regex" : {
+         "file" : "lib/Geo/UK/Postcode/Regex.pm",
+         "version" : "0.013"
+      },
+      "Geo::UK::Postcode::Regex::Simple" : {
+         "file" : "lib/Geo/UK/Postcode/Regex/Simple.pm",
+         "version" : "0.013"
       }
    },
    "release_status" : "stable",
