@@ -47,22 +47,31 @@ my @TEST_PCS = (
     {   raw => 'XX11X1XX',
         lax => 0,
     },
-    {   raw  => 'QI1 1AA',
-        area => 'QI',
+    {   raw          => 'QI1 1AA',
+        area         => 'QI',
         district     => '1',
         subdistrict  => undef,
         sector       => '1',
         unit         => 'AA',
         fixed_format => 'QI1  1AA',
     },
-    {   raw           => 'AB10 1II',
-        area          => 'AB',
-        district      => '10',
-        subdistrict   => undef,
-        sector        => '1',
-        unit          => 'II',
-        fixed_format  => 'AB10 1II',
-        posttowns     => ['ABERDEEN'],
+    {   raw          => 'AB10 1II',
+        area         => 'AB',
+        district     => '10',
+        subdistrict  => undef,
+        sector       => '1',
+        unit         => 'II',
+        fixed_format => 'AB10 1II',
+        posttowns    => ['ABERDEEN'],
+        unanchored   => {
+            sector         => undef,
+            unit           => undef,
+            strict         => 1,
+            valid          => 1,
+            captures       => [ 'AB', '10' ],
+            valid_captures => ['AB10'],
+            needs_space    => 1,
+        },
     },
     {   raw          => 'A1 1AA',
         area         => 'A',
@@ -188,6 +197,16 @@ my @TEST_PCS = (
         valid        => 0,
         strict       => 0,
         posttowns    => [],
+        unanchored   => {
+            sector         => undef,
+            unit           => undef,
+            fixed_format   => 'AB1',
+            partial        => 1,
+            strict         => 1,
+            captures       => [ 'AB', '1' ],
+            valid_captures => ['AB1'],
+            needs_space    => 1,
+        },
     },
     {   raw          => 'WC1H 9EB',
         area         => 'WC',
